crates/scrap_parser/tests/snapshots/snapshots__inner_-4.snap
---
source: crates/scrap_parser/tests/snapshots.rs
expression: "parse(db, source)"
---
Can(
    Can {
        [salsa id]: Id(2000),
        id: NodeId {
            id: 0,
            file_hash: 16101345102062212073,
        },
        name: ModuleId {
            path: PathKey {
                path: Path {
                    span: Span {
                        [salsa id]: Id(813),
                        start: 0,
                        end: 4,
                    },
                    segments: [
                        PathSegment {
                            ident: Ident {
                                id: NodeId {
                                    id: -2,
                                    file_hash: 0,
                                },
                                name: Symbol {
                                    text: "test",
                                },
                                span: Span {
                                    [salsa id]: Id(812),
                                    start: 0,
                                    end: 4,
                                },
                            },
                            id: NodeId {
                                id: -2,
                                file_hash: 0,
                            },
                        },
                    ],
                },
            },
        },
        items: [
            Item {
                kind: Fn(
                    FnDef {
                        [salsa id]: Id(1c00),
                        id: NodeId {
                            id: 9,
                            file_hash: 16101345102062212073,
                        },
                        ident: Ident {
                            id: NodeId {
                                id: 1,
                                file_hash: 16101345102062212073,
                            },
                            name: Symbol {
                                text: "main",
                            },
                            span: Span {
                                [salsa id]: Id(802),
                                start: 3,
                                end: 7,
                            },
                        },
                        args: [],
                        ret_type: None,
                        body: Block {
                            stmts: [
                                Stmt {
                                    id: NodeId {
                                        id: 7,
                                        file_hash: 16101345102062212073,
                                    },
                                    kind: Let(
                                        Local {
                                            id: NodeId {
                                                id: 6,
                                                file_hash: 16101345102062212073,
                                            },
                                            pat: Pat {
                                                id: NodeId {
                                                    id: 3,
                                                    file_hash: 16101345102062212073,
                                                },
                                                kind: Ident(
                                                    BindingMode(
                                                        No,
                                                        Not,
                                                    ),
                                                    Ident {
                                                        id: NodeId {
                                                            id: 2,
                                                            file_hash: 16101345102062212073,
                                                        },
                                                        name: Symbol {
                                                            text: "x",
                                                        },
                                                        span: Span {
                                                            [salsa id]: Id(80a),
                                                            start: 20,
                                                            end: 21,
                                                        },
                                                    },
                                                    None,
                                                ),
                                                span: Span {
                                                    [salsa id]: Id(80c),
                                                    start: 22,
                                                    end: 23,
                                                },
                                            },
                                            ty: None,
                                            kind: Init(
                                                Expr {
                                                    id: NodeId {
                                                        id: 5,
                                                        file_hash: 16101345102062212073,
                                                    },
                                                    kind: Lit(
                                                        Lit {
                                                            id: NodeId {
                                                                id: 4,
                                                                file_hash: 16101345102062212073,
                                                            },
                                                            kind: Integer,
                                                            span: Span {
                                                                [salsa id]: Id(80e),
                                                                start: 24,
                                                                end: 26,
                                                            },
                                                        },
                                                    ),
                                                    span: Span {
                                                        [salsa id]: Id(814),
                                                        start: 24,
                                                        end: 27,
                                                    },
                                                },
                                            ),
                                            span: Span {
                                                [salsa id]: Id(815),
                                                start: 16,
                                                end: 27,
                                            },
                                        },
                                    ),
                                    span: Span {
                                        [salsa id]: Id(815),
                                        start: 16,
                                        end: 27,
                                    },
                                },
                            ],
                            id: NodeId {
                                id: 8,
                                file_hash: 16101345102062212073,
                            },
                            span: Span {
                                [salsa id]: Id(816),
                                start: 10,
                                end: 29,
                            },
                        },
                        span: Span {
                            [salsa id]: Id(817),
                            start: 0,
                            end: 29,
                        },
                    },
                ),
                span: Span {
                    [salsa id]: Id(818),
                    start: 0,
                    end: 29,
                },
                id: NodeId {
                    id: 10,
                    file_hash: 16101345102062212073,
                },
                vis: Visibility {
                    kind: Inherited,
                    span: Span {
                        [salsa id]: Id(800),
                        start: 0,
                        end: 2,
                    },
                },
            },
        ],
    },
)
